Section destaques criado, ajustando o dimensionamento

--- a/index.html
+++ b/index.html
@@ -68,6 +68,25 @@
 
   </section>
 
+  <section id="destaques">
+
+    <div class="container__destaques gap1">
+      <div class="noticia1">
+        <img src="./assets/Image01.png" alt="">
+        
+      </div>
+
+
+      <div class="noticias grid gap1">
+        <img src="./assets/celularimage.png" alt="">
+        <img src="./assets/6g.png" alt="">
+        <img src="./assets/mulhercomrelogio.png" alt="">
+        <img src="./assets/criancavr.png" alt="">
+      </div>
+
+    </div>
+
+  </section>
 
 </body>
 </html>
