Ajustando o conteudo do destaques na div noticia1

--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
     <div class="container__destaques gap1">
       <div class="noticia1">
         <img src="./assets/Image01.png" alt="">
-        
+        <div class="container__contentcard ">
+
+          <h3>Robótica</h3>
+          
+          <span>Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</span>
+        </div>
       </div>
 
 
