Criando e ajustando a div heading da section week

--- a/index.html
+++ b/index.html
@@ -141,5 +141,17 @@
 
   </section>
 
+  <section id="week">
+
+    <div class="heading flex">
+      <span>Mais lidas da semana</span>
+
+      <div class="containerimg grid">
+      <span>Ver tudo </span>
+      <img src="./assets/icons/ArrowRight.svg" alt="">
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
