--- a/index.html
+++ b/index.html
@@ -144,13 +144,17 @@
   <section id="week">
 
     <div class="heading flex">
-      <span>Mais lidas da semana</span>
+      <span class="dont-break-word">Mais lidas da semana</span>
 
       <div class="containerimg grid">
-      <span>Ver tudo </span>
+      <span class="dont-break-word">Ver tudo </span>
       <img src="./assets/icons/ArrowRight.svg" alt="">
       </div>
     </div>
+
+
+
+    
   </section>
 
 </body>
