Creating a cards of week

--- a/index.html
+++ b/index.html
@@ -154,6 +154,38 @@
 
 
 
+    <div class="cardsweek">
+
+      <div class="cardsweek__content grid">
+
+        <div class="cardsweek__cards">
+
+
+          <div class="cardweek__image">
+
+            <img src="assets/carrotech.png" alt="">
+          </div>
+
+          <div class="carweek__text">
+
+            <span>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.</span>
+          </div>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+      </div>
+
+    </div>
+
     
   </section>
 
