Concertado a div card do vr, aplicar nos demais

--- a/index.html
+++ b/index.html
@@ -193,20 +193,24 @@
 
 
 
-        <div class="cardsweek__cards">
+      <div class="cardsweek__cards">
 
 
           
-<div>
+        <div>
+
+         <div class="imagecard">
             <img src="assets/vr.png" alt="">
-     </div>     
+         </div>
 
-          <div class="carweek__text">
+          
+            <div class="textcards__week">
+              <span>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.</span>
 
-            <span>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.</span>
-          </div>
+            </div>
+        </div>   
 
-        </div>
+      </div>
 
 
 
