esqueleto do about

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
           <div class="textcards__week">
 
-            <span>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.</span>
+            <span>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</span>
           </div>
 
           </div>
@@ -250,6 +250,31 @@
     </div>
 
     
+  </section>
+
+  <section id="about">
+
+
+    <div class="about_container__content flex">
+
+
+    
+    <div class="destaques__IA">
+
+      oi
+    </div>
+
+    <div class="aside">
+      oi
+    </div>
+
+
+
+
+</div>
+
+
+
   </section>
 
 </body>
