--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   <section id="about">
 
 
-    <div class="about_container__content flex">
+    <div class="about_container__content grid">
 
 
     
