--- a/index.html
+++ b/index.html
@@ -312,7 +312,19 @@
 
 
     <div class="aside">
-      oi
+      
+
+      <div class="ads">
+        <div class="image">
+
+        </div>
+
+        <div class="viuistoaqui">
+          
+        </div>
+
+
+      </div>
     </div>
 
 
